fixed heading, overflow

--- a/style.css
+++ b/style.css
@@ -3,6 +3,20 @@ html {
   margin: 0;
   padding: 0;
   width: 100%;
+  
+}
+
+body {
+  text-align: center;
+  font-family: "Ubuntu", "Lucida Grande", monospace;
+  font-style: normal;
+  background-color: white;
+  /*background-image: linear-gradient(to bottom, #e8c9e7, white);*/
+  color: #b6a6e6;
+}
+
+html, body {
+  overflow-x: hidden;
 }
 
 /*for text */
@@ -26,15 +40,6 @@ html {
   border-radius: 8px;
 }
 
-body {
-  text-align: center;
-  font-family: "Ubuntu", "Lucida Grande", monospace;
-  font-style: normal;
-  background-color: white;
-  /*background-image: linear-gradient(to bottom, #e8c9e7, white);*/
-  color: #b6a6e6;
-}
-
 
 h1 {
   text-align: center;
@@ -43,11 +48,13 @@ h1 {
   font-style: normal;
   font-weight: 600;
   font-size: 80px;
-  margin: 30px 0;
+  margin: 0;
+  padding: 30px 0;
 }
 
 .header1 {
   display: flex;
+  width: 100%;
   position: relative;
   z-index: 5;
   justify-content: center;
